tests/vendor/valid/trivial/ne_false.c
//expect 0
//tags: trivial, binary, logical
int main() {
    return 0 != 0;
}