tests/vendor/invalid/syntax/return_in_assignment.c
//tags: simple
int main()
{
    int 10 = return 0;
}